--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.8",
-    "dompurify": "^3.2.4",
+    "isomorphic-dompurify": "^2.22.0",
     "luxon": "^3.5.0",
     "next": "15.1.6",
     "react": "^19.0.0",
