--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.17.19",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-gtm-module": "^2.0.4",
+    "@types/react-icons": "^2.2.7",
     "@types/tailwindcss": "^3.0.11",
+    "@types/three": "^0.173.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.3",
